tests/NormalTests/paczka1/fuzzy1/73699910.err
Error in line 10: S110 S387 57,2
Error in line 13: S110 A807 84,9
Error in line 12: Z1VpqZ S387 27,2
Error in line 15: aa6Npm7jpaS A807 256,8
Error in line 17: Z1VpqZ A985 51,1
Error in line 23: S110 S387 9,4
Error in line 19: aa6Npm7jpaS S110 91,3
Error in line 29: 4zonGp6m4o A985 52,1
